Starting the log on page

--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
-    <title>Page Title</title>
+    <title>Sign Page</title>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
@@ -15,49 +15,59 @@
 </head>
 
 <body>
-    <div class="login_button" style="text-align: center">
-        <!-- Button trigger modal -->
-        <button id="login" type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-            Login
+
+    <!--<div class="background">
+        <img src="news.jpg" alt="News" height="850" width="800">
+    </div>-->
+
+    <div class="pageNav">
+        <h2>Welcome!</h2>
+        <p>If you are a new user click, New User.</p>
+        <button id="NewUser" type="button" class="btn btn-primary">New User</button>
+        <p>If not, click Login.</p>
+        <button id="login" type="button" class="btn btn-primary" data-toggle="modal" data-target="#LoginModal">
+                Login
         </button>
     </div>
 
+    
+
     <!-- Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    <div class="modal fade" id="LoginModal" tabindex="-1" role="dialog" aria-labelledby="LoginModal"
         aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Login</h5>
+                    <h5 class="modal-title" id="LoginModal">Login</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
 
                 <div class="modal-body">
-                    <div class="dropdown">
-                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            User Type
-                        </button>
-                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <a class="dropdown-item" href="#">Manager</a>
-                            <a class="dropdown-item" href="#">Anchor</a>
-                        </div>
+                        <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <label class="btn btn-secondary active">
+                                    <input type="radio" name="options" id="option1" autocomplete="off" checked> Manager
+                                </label>
+                                <label class="btn btn-secondary">
+                                    <input type="radio" name="options" id="option2" autocomplete="off"> Anchor
+                                </label>
+                            </div>
                     </div>
                     <div class="login">
-                        <div class="input-group mb-3">
-                            <input type="text" class="form-control" placeholder="Username" aria-label="Username">
-                        </div>
-                        <div class="input-group mb-3">
-                            <input type="text" class="form-control" placeholder="Password" aria-label="Password">
-                        </div>
+                        <form>
+                            <div class="input-group mb-3">
+                                <input type="text" class="form-control" placeholder="Username" aria-label="Username">
+                            </div>
+                            <div class="input-group mb-3">
+                                <input type="text" class="form-control" placeholder="Password" aria-label="Password">
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                            <button type="button" class="btn btn-primary">Login</button>
                     </div>
 
-                </div>
-
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-primary">Login</button>
                 </div>
             </div>
         </div>
