Updating the sign in page

--- a/login.html
+++ b/login.html
@@ -15,12 +15,10 @@
 </head>
 
 <body>
+    <div class="background"></div>
 
-    <!--<div class="background">
-        <img src="news.jpg" alt="News" height="850" width="800">
-    </div>-->
-
-    <div class="pageNav">
+    
+    <div class="User_interaction">
         <h2>Welcome!</h2>
         <p>If you are a new user click, New User.</p>
         <button id="NewUser" type="button" class="btn btn-primary">New User</button>
