Updating the sign in page

--- a/login.html
+++ b/login.html
@@ -23,9 +23,7 @@
         <p>If you are a new user click, New User.</p>
         <button id="NewUser" type="button" class="btn btn-primary">New User</button>
         <p>If not, click Login.</p>
-        <button id="login" type="button" class="btn btn-primary" data-toggle="modal" data-target="#LoginModal">
-                Login
-        </button>
+        <button id="login" type="button" class="btn btn-primary" data-toggle="modal" data-target="#LoginModal">Login</button>
     </div>
 
     
